<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.arcusys.learn</groupId>
    <artifactId>learn</artifactId>
    <version>1.7-SNAPSHOT</version>
    <name>Learn</name>
    <url>http://maven.apache.org</url>

    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <scala.version>2.9.1</scala.version>
        <liferay.version>6.1.1</liferay.version>
        <portlet-api.version>2.0</portlet-api.version>
        <servlet-api.version>2.5</servlet-api.version>
        <slf4j.version>1.6.3</slf4j.version>
        <logback.version>0.9.30</logback.version>
        <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
        <hibernate-core.version>4.2.0.Final</hibernate-core.version>
        <hibernate-entitymanager.version>4.2.0.Final</hibernate-entitymanager.version>
        <hibernate-jpa.version>1.0.1.Final</hibernate-jpa.version>
        <jstl.version>1.2</jstl.version>
        <taglib.version>1.1.2</taglib.version>
    </properties>
    <distributionManagement>
        <site>
            <id>dev-1.arcusys.fi</id>
            <url>davs://dev-1.arcusys.fi/projects/build-support/learn</url>
        </site>
        <repository>
            <id>releases</id>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-oss-releases</url>
        </repository>

        <snapshotRepository>
            <id>snapshots</id>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-oss-snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <scm>
        <connection>scm:git:https://dev-1.arcusys.fi/fisheye/git/learngit.git</connection>
        <developerConnection>scm:git:https://dev-1.arcusys.fi/fisheye/git/learngit.git</developerConnection>
    </scm>

    <modules>
        <module>learn-scorm-package-model</module>
        <module>learn-scorm-package-parser</module>
        <module>learn-scorm-package-serializer</module>
        <module>learn-quiz-model</module>
        <module>learn-scorm-tracking-model</module>
        <module>learn-quiz-package-generator</module>
        <module>learn-util</module>
        <module>learn-persistence-api</module>
        <module>learn-persistence-api-test</module>
        <module>learn-persistence</module>
        <module>learn-persistence-liferay</module>
        <module>learn-scorm-package-deployer</module>
        <module>learn-lms-core</module>
        <module>learn-puppet</module>
        <module>learn-portlet</module>
        <module>learn-servicebuilder</module>
        <module>learn-ui-test</module>
        <module>learn-assembly</module>
        <module>learn-social-model</module>
        <module>learn-tincan-package</module>
        <module>learn-tincan-model</module>
        <module>learn-settings-model</module>
        <module>learn-liferay611-hook</module>
        <module>learn-liferay612-hook</module>
        <module>learn-demo-hook</module>
        <!--<module>learn-site-templates-hook</module>-->
        <module>learn-tincan-lrs</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-library</artifactId>
                <version>${scala.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.10</version>
            </dependency>
            <dependency>
                <groupId>org.scala-tools.subcut</groupId>
                <artifactId>subcut_${scala.version}</artifactId>
                <version>1.0</version>
            </dependency>
            <dependency>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest_${scala.version}</artifactId>
                <version>1.7.2</version>
            </dependency>
            <dependency>
                <groupId>org.scalamock</groupId>
                <artifactId>scalamock-scalatest-support_${scala.version}</artifactId>
                <version>2.3</version>
            </dependency>
            <dependency>
                <groupId>org.specs2</groupId>
                <artifactId>specs2_${scala.version}</artifactId>
                <version>1.12.4</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>jcl-over-slf4j</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-aop</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context-support</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-tx</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-orm</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-jdbc</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-test</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-webmvc-portlet</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-core</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-web</artifactId>
                <version>${spring.framework.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.security</groupId>
                <artifactId>spring-security-config</artifactId>
                <version>${spring.framework.version</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <repositories>
        <repository>
            <id>maven2-repository.dev.java.net</id>
            <name>Java.net Repository for Maven</name>
            <url>http://download.java.net/maven/2/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>scala-tools.org</id>
            <name>Scala-Tools Maven2 Repository</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>arcusys-public-repositories</id>
            <url>https://dev-1.arcusys.fi/mvn/content/groups/public</url>
        </repository>
        <!--Following repositories are required for building pipeline in Jenkins: -->
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
            <id>arcusys-releases</id>
            <name>public</name>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-releases</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <id>arcusys-snapshots</id>
            <name>arcusys-snapshots</name>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-snapshots/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <id>arcusys-testing</id>
            <name>arcusys-testing</name>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-testing/</url>
        </repository>
        <repository>
            <snapshots>
                <enabled>true</enabled>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
            <id>arcusys-staging</id>
            <name>arcusys-staging</name>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/arcusys-staging/</url>
        </repository>
        <repository>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>liferay-ee-releases</id>
            <name>Liferay EE Releases</name>
            <url>https://dev-1.arcusys.fi/mvn/content/repositories/liferay-ee-releases</url>
        </repository>
    </repositories>
    <build>
        <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
        <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.scala-tools</groupId>
                    <artifactId>maven-scala-plugin</artifactId>
                    <version>2.15.2</version>
                    <executions>
                        <execution>
                            <id>compile</id>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                            <phase>compile</phase>
                        </execution>
                        <execution>
                            <id>test-compile</id>
                            <goals>
                                <goal>testCompile</goal>
                            </goals>
                            <phase>test-compile</phase>
                        </execution>
                        <execution>
                            <phase>process-resources</phase>
                            <goals>
                                <goal>compile</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <scalaVersion>${scala.version}</scalaVersion>
                        <args>
                            <arg>-target:jvm-1.5</arg>
                        </args>
                        <jvmArgs>
                            <jvmArg>-Xmx1024m</jvmArg>
                            <jvmArg>-Xmx1024m</jvmArg>
                        </jvmArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.5.7.201204190339</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>prepare-agent</goal>
                            </goals>
                        </execution>
                        <execution>
                            <id>report</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>report</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.3</version>
                </plugin>
                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <includes>
                            <include>**/*Spec.java</include>
                            <include>**/*Test.java</include>
                        </includes>
                        <excludes>
                            <exclude>**/UISuitTest.java</exclude>
                        </excludes>
                        <argLine>-Xms512m -Xmx1024m -XX:MaxPermSize=512m</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>default</id>
                        <goals>
                            <goal>perform</goal>
                        </goals>
                        <configuration>
                            <pomFileName>https://dev-1.arcusys.fi/fisheye/git/learngit.git/pom.xml</pomFileName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
